@@ -4,3 +4,7 @@
 /tmp/
 /libcm4all-was*-dev/
 /libcm4all-was-*1/
+/libcm4all-was-*1.install
+/libcm4all-was-simple-dev.install
+/libcm4all-was-apreq-dev.install
+/libcm4all-was-xios-dev.install
